# arma-tools

./: .gitignore  CMakeLists.txt  CMakePresets.json  LEGAL.md  LICENSE.md  Makefile  README.md
gui/: CMakeLists.txt
gui/render_domain_plugins/: renderer_dx9.cpp  renderer_gles.cpp  renderer_null.cpp
gui/resources/: arma-tools.gresource.xml
gui/resources/css/: style.css
gui/src/: audio_draw_util.h  config.cpp  config.h  dockable_panel.h  gl_model_view.h  log_panel.cpp  log_panel.h  main.cpp  model_view_panel.h  pbo_util.cpp  pbo_util.h  spectrogram.h  tab_about.h  tab_asset_browser.cpp  tab_asset_browser.h  tab_config.cpp  tab_config.h  tab_conversions.cpp  tab_conversions.h  tab_obj_replace.h  tab_ogg_validate.cpp  tab_p3d_convert.cpp  tab_p3d_info.h  tab_paa_preview.cpp  tab_pbo.cpp  tab_wrp_info.cpp  tab_wrp_project.cpp
gui/src/app/: default_panel_catalog.cpp  default_panel_catalog.h  gl_model_camera_controller.cpp  gl_model_camera_controller.h  log_panel_presenter.cpp  log_panel_presenter.h  model_view_panel_presenter.cpp  model_view_panel_presenter.h  rvmat_preview_camera_controller.cpp  rvmat_preview_camera_controller.h  tab_config_presenter.cpp  tab_config_presenter.h  wrp_terrain_camera_controller.cpp  wrp_terrain_camera_controller.h
gui/src/audio/: audio_decode.cpp  audio_decode.h  audio_engine.cpp  audio_engine.h  spectrogram.cpp
gui/src/core/: app_window.cpp  app_window.h  arma-tools.rc.in  config.cpp  config.h  main.cpp
gui/src/domain/: gl_model_camera_types.h  log_level.h  model_view_panel_types.h  panel_descriptor.h  rvmat_preview_camera_types.h  wrp_terrain_camera_types.h
gui/src/panels/: dockable_panel.h  gl_model_view.cpp  gl_model_view.h  gl_rvmat_preview.cpp  gl_rvmat_preview.h  gl_wrp_terrain_view.cpp  gl_wrp_terrain_view.h  log_panel.cpp  log_panel.h  model_view_panel.cpp  model_view_panel.h  panel_wrapper.h
gui/src/render_domain/: model_view_widget.cpp  model_view_widget.h  rd_backend_abi.h  rd_backend_kind.cpp  rd_backend_kind.h  rd_backend_registry.cpp  rd_backend_registry.h  rd_backend_selection.cpp  rd_backend_selection.h  rd_backend_types.h  rd_builtin_backends.cpp  rd_builtin_backends.h  rd_cli_override.cpp  rd_cli_override.h  rd_runtime_config.cpp  rd_runtime_config.h  rd_runtime_state.cpp  rd_runtime_state.h  rd_scene_blob.cpp  rd_scene_blob.h  rd_scene_blob_builder.cpp  rd_scene_blob_builder.h  rd_ui_render_bridge.cpp  rd_ui_render_bridge.h  rvmat_preview_widget.cpp  rvmat_preview_widget.h  wrp_terrain_widget.cpp  wrp_terrain_widget.h
gui/src/services/: lod_textures_loader.cpp  lod_textures_loader.h  p3d_model_loader.cpp  p3d_model_loader.h  pbo_index_service.cpp  pbo_index_service.h  pbo_util.cpp  pbo_util.h  procedural_texture.cpp  procedural_texture.h  process_util.cpp  process_util.h  textures_loader.cpp  textures_loader.h
gui/src/tabs/: tab_about.cpp  tab_asset_browser.cpp  tab_asset_browser.h  tab_audio.cpp  tab_audio.h  tab_config.cpp  tab_config.h  tab_config_viewer.cpp  tab_config_viewer.h  tab_obj_replace.cpp  tab_obj_replace.h  tab_ogg_validate.cpp  tab_ogg_validate.h  tab_p3d_convert.cpp  tab_p3d_convert.h  tab_p3d_info.cpp  tab_p3d_info.h  tab_paa_preview.cpp  tab_paa_preview.h  (+6 more)
gui/ui_domain_plugins/: ui_gtk.cpp  ui_imgui.cpp  ui_null.cpp
libs/: CMakeLists.txt
libs/armapath/: CMakeLists.txt
libs/binutil/: CMakeLists.txt
libs/config/: CMakeLists.txt
libs/console_unicode/: CMakeLists.txt  console_unicode.cpp  console_unicode.h
libs/forestshape/: CMakeLists.txt
libs/heightpipe/: CMakeLists.txt
libs/lzo/: CMakeLists.txt
libs/lzss/: CMakeLists.txt
libs/objcat/: CMakeLists.txt
libs/ogg/: CMakeLists.txt
libs/p3d/: CMakeLists.txt
libs/paa/: CMakeLists.txt
libs/pbo/: CMakeLists.txt
libs/pboindex/: CMakeLists.txt
libs/roadnet/: CMakeLists.txt
libs/roadobj/: CMakeLists.txt
libs/rvmat/: CMakeLists.txt
libs/shp/: CMakeLists.txt
libs/surface/: CMakeLists.txt
libs/tb/: CMakeLists.txt
libs/tga/: CMakeLists.txt
libs/wrp/: CMakeLists.txt
libs/wss/: CMakeLists.txt
tests/: CMakeLists.txt  gl_model_camera_controller_tests.cpp  gui_tab_config_presenter_tests.cpp  ir2mlod_roundtrip_tests.cpp  log_panel_presenter_tests.cpp  model_view_panel_presenter_tests.cpp  render_domain_camera_blob_tests.cpp  render_domain_scene_blob_builder_tests.cpp  render_domain_selection_tests.cpp  render_domain_ui_bridge_tests.cpp  rvmat_preview_camera_controller_tests.cpp  spec_validation_tests.cpp  ui_domain_cli_override_tests.cpp  ui_domain_registry_tests.cpp  ui_domain_selection_tests.cpp  ui_event_adapter_tests.cpp  ui_runtime_config_tests.cpp  wrp_terrain_camera_controller_tests.cpp
tests/fixtures/: README.md
tools/: CMakeLists.txt
tools/a3db/: CMakeLists.txt  main.cpp
tools/audio_player/: CMakeLists.txt  main.cpp
tools/common/: CMakeLists.txt  cli_logger.h
tools/console_unicode_test/: CMakeLists.txt  main.cpp
tools/heightpipe/: CMakeLists.txt  main.cpp
tools/ir2mlod/: CMakeLists.txt  main.cpp
tools/mlod2ir/: CMakeLists.txt  main.cpp
tools/ogg_validate/: CMakeLists.txt  main.cpp
tools/p3d_info/: CMakeLists.txt  main.cpp
tools/p3d_odol2mlod/: CMakeLists.txt  main.cpp
tools/paa2img/: CMakeLists.txt  main.cpp
tools/paa2tga/: CMakeLists.txt  main.cpp
tools/pbo_extract/: CMakeLists.txt  main.cpp
tools/pbo_info/: CMakeLists.txt  main.cpp
tools/tga2paa/: CMakeLists.txt  main.cpp
tools/wrp2project/: CMakeLists.txt  README.md  generators.cpp  main.cpp  project.h  replacement_map.h  tv4l.cpp  tv4p.cpp  tv4s.cpp  v4d.cpp
tools/wrp_debug/: CMakeLists.txt  main.cpp
tools/wrp_dump/: CMakeLists.txt  main.cpp
tools/wrp_heightmap/: CMakeLists.txt  main.cpp
tools/wrp_info/: CMakeLists.txt  main.cpp
tools/wrp_obj2forestshape/: CMakeLists.txt  main.cpp
tools/wrp_obj2roadnet/: CMakeLists.txt  main.cpp
tools/wrp_objreplace/: CMakeLists.txt  main.cpp
tools/wrp_roadnet/: CMakeLists.txt  main.cpp
tools/wrp_satmask/: CMakeLists.txt  asset_provider.cpp  asset_provider.h  main.cpp  mapinfo_tiles.cpp  mapinfo_tiles.h  mosaic.cpp  mosaic.h  png_stream_writer.cpp  png_stream_writer.h
(+141 files in other folders)
