add_subdirectory(common)
add_subdirectory(pbo_info)
add_subdirectory(pbo_extract)
add_subdirectory(p3d_info)
add_subdirectory(mlod2ir)
add_subdirectory(ir2mlod)
add_subdirectory(paa2img)
add_subdirectory(paa2tga)
add_subdirectory(tga2paa)
add_subdirectory(wrp_info)
add_subdirectory(wrp_dump)
add_subdirectory(wrp_heightmap)
add_subdirectory(heightpipe)
add_subdirectory(wrp_roadnet)
add_subdirectory(wrp_obj2roadnet)
add_subdirectory(wrp_obj2forestshape)
add_subdirectory(wrp_satmask)
add_subdirectory(ogg_validate)
add_subdirectory(wrp_objreplace)
add_subdirectory(a3db)
add_subdirectory(wrp2project)
add_subdirectory(p3d_odol2mlod)
add_subdirectory(audio_player)
add_subdirectory(wrp_debug)
add_subdirectory(console_unicode_test)
